# Hi-Voicer

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: release.yml
docs/: 0.2.1-打包测试清单.md  faster-whisper-worker.md  release-1.1.0.md  release-1.2.0.md  release-1.2.1.md  模型说明.md  环境准备.md
docs/superpowers/plans/: 2026-05-28-hi-voicer-foundation.md
docs/superpowers/specs/: 2026-05-28-hi-voicer-design.md
scripts/: check-bundled-resources.ps1  prepare-llama-runtime.ps1  prepare-sherpa-runtime.ps1  setup-windows.ps1
scripts/faster-whisper-worker/: README.md  engine.example.json  fw_worker.py  requirements.txt
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: THIRD-PARTY-NOTICES.md
src-tauri/src/: app_state.rs  config.rs  lib.rs  main.rs
src/__tests__/: audio-processing-page.test.tsx  diagnostics-page.test.tsx  hotwords-page.test.tsx  model-presets.test.ts  settings-page.test.tsx  settings.test.ts  subtitle-editor-page.test.tsx  term-library.test.ts  transcription-page.test.tsx
src/components/: AppShell.tsx  SettingRow.tsx  StatusBadge.tsx
src/data/: mockState.ts  modelPresets.ts
src/lib/: api.ts  termLibrary.ts
src/pages/: AudioProcessingPage.tsx  DiagnosticsPage.tsx  HomePage.tsx  HotwordsPage.tsx  SettingsPage.tsx  SubtitleEditorPage.tsx  TranscriptionPage.tsx
