[package]
name = "hi-voicer"
version = "0.2.0"
description = "Offline Chinese voice input and transcription desktop app"
authors = ["Hi-Voicer"]
edition = "2021"

[lib]
name = "hi_voicer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
rfd = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
windows = { version = "0.54", features = ["Win32_UI_Input_KeyboardAndMouse"] }
zip = "2"
